@startuml
class Produto {
    - id: Integer
    - preco: Double
    - nome: String
    - quantidade: Integer
    - tamanho: String
    - tipo: String
    - material: String
}

class OculosDeSol extends Produto {
    - categoriaFiltroSolar: String
    - assinatura: String
    - modelo: String
}

class Armacao extends Produto {
    - formato: String
    - curvaLente: String
}

class Lente extends Produto{
    - tratamento: String
    - espessura: String
    - imagemReceita: String
}

class Pedido {
    - id: Integer
    - data: LocalDateTime
    - precoTotal: Double
}

class ItemPedido {
    - quantidade: Integer
    - precoUnitario: Double
}

class Usuario {
    - id: Integer
    - nome: String
    - userName: String
    - senha: String
}

class Endereco {
    - cep: String
    - estado: String
    - cidade: String
    - bairro: String
    - rua: String
    - numero: Integer
}

class Pagamento {
    - valor: Double
    - data: LocalDateTime
    - status: String
}

enum TipoPagamento {
    BOLETO, PIX, DEBITO, CREDITO
}


enum Categoria {
    MASCULINO, FEMININO, UNISSEX, INFANTIL
}

enum StatusPedido {
    PENDENTE, PAGO, CANCELADO
}

enum Status {
    DISPONIVEL, INDISPONIVEL
}
enum Perfil {
    ADM, USER
}


class Cor {
    - nome: String
    - referencia: String
}

Class Marca { 
    - nome: String
    - cnpj: String
}

Armacao     "*" *--> "1" Cor
Armacao     "*"  --> "1" Categoria

Produto     "*" -left-> "1"  Marca
Produto     "*" --> "1"  Status

OculosDeSol "*" *--> "1" Cor
OculosDeSol "*"  --> "1" Categoria

Pedido      "*" --> "1"  Usuario
Pedido      "*" --> "*"  ItemPedido
Pedido      "1" --> "*"  Endereco
Pedido      "1" --> "*"  StatusPedido
Pedido      "1" -up-> "1"  Pagamento

Pagamento   "*" -left-> "1"  TipoPagamento

ItemPedido  "*" --> "1"  Produto

Usuario     "1" --> "*"  Perfil
@enduml
